# plugin-example

./: .gitignore  Cargo.toml  Makefile  README.md  init.sql  manifest.yaml  manifest.yaml.template  plugin_config.yaml  plugin_tutorial.md  topology.toml
migrations/: 0001_author.db  0001_weather.db
src/: http.rs  lib.rs  openweather.rs
