[package]
name = "plugin-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
picoplugin = { git = "ssh://git@git.picodata.io/picodata/picodata/picodata.git", rev = "75ccc3a66c1b01c930f69c5e28dff7bc6ff2335a"  }
linkme = "0.3.14"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
fibreq = "0.1.5"
anyhow = { version = "1.0.75" }
once_cell = "1.18.0"
serde_qs = "0.12"
rmpv = { version = "1.0.0", features = ["with-serde"] }

[lib]
crate-type = ["lib", "cdylib"]
